unpackaged/main/default/objects/Case/fields/IntakeInitialDecisionTAT__c.field-meta.xml
<CustomField>
    <fullName>IntakeInitialDecisionTAT__c</fullName>
    <formula>(5 * ( FLOOR( (  DATEVALUE( InitialDecisionDate__c )  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE( InitialDecisionDate__c ) - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( DATEVALUE(  CreatedDate  ) - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( DATEVALUE(  CreatedDate  ) - DATE( 1900, 1, 8), 7 ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intake First Decision TAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>