unpackaged/main/default/objects/Case/fields/Integrated_Supplemental__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Supplemental__c</fullName>
    <formula>IF(Account.Integrated_Supplemental__c &lt;&gt; &quot;&quot;,  Account.Integrated_Supplemental__c , Master_Group__r.Integrated_Supplemental__c)</formula>
    <label>Integrated Supplemental</label>
    <type>Text</type>
</CustomField>