unpackaged/main/default/objects/Case/fields/Internal_Hold_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Hold_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Hold End Date</label>
    <type>DateTime</type>
</CustomField>