unpackaged/main/default/objects/Case/fields/Internal_Hold_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Hold_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Hold Start Date</label>
    <type>DateTime</type>
</CustomField>