unpackaged/main/default/objects/Case/fields/Is_Data_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Data_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Data Available?</description>
    <inlineHelpText>Is data available? (How do you know the problem occurs?)  If data is available key in where is the data/who has access field. If the data is not available key in how to  collect the data.</inlineHelpText>
    <label>Is Data Available</label>
    <type>Checkbox</type>
</CustomField>