unpackaged/main/default/objects/Case/fields/Is_Manager__c.field-meta.xml
<CustomField>
    <fullName>Is_Manager__c</fullName>
    <formula>IF(
Owner:User.ManagerId = $User.Id, true, false
)</formula>
    <label>Is Manager</label>
    <type>Checkbox</type>
</CustomField>