unpackaged/main/default/objects/Case/fields/Itemized_Bill_Statement__c.field-meta.xml
<CustomField>
    <fullName>Itemized_Bill_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>capture claim intake required document has been received</description>
    <inlineHelpText>capture claim intake required document has been received</inlineHelpText>
    <label>Itemized Bill Statement</label>
    <type>Checkbox</type>
</CustomField>