unpackaged/main/default/objects/Case/fields/Itemized_Bill_Statement_Received__c.field-meta.xml
<CustomField>
    <fullName>Itemized_Bill_Statement_Received__c</fullName>
    <description>capture claim intake required document has been received</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>capture claim intake required document has been received</inlineHelpText>
    <label>Itemized Bill Statement Received</label>
    <type>Date</type>
</CustomField>