unpackaged/main/default/objects/Case/fields/LifePRO_Name_ID__c.field-meta.xml
<CustomField>
    <fullName>LifePRO_Name_ID__c</fullName>
    <description>Created to capture LifePRO name id</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures LifePRO Name ID</inlineHelpText>
    <label>LifePRO Name ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>