unpackaged/main/default/objects/Case/fields/LifePRO_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>LifePRO_Policy_Number__c</fullName>
    <description>Captures LifePRO Policy Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Capture LifePRO Policy Number</inlineHelpText>
    <label>LifePRO Policy Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>