unpackaged/main/default/objects/Case/fields/LM_Case_Age__c.field-meta.xml
<CustomField>
    <fullName>LM_Case_Age__c</fullName>
    <description>Reflect case age (calendar days) - days in external and internal hold</description>
    <formula>IF (IsClosed,ClosedDate - CreatedDate,NOW()- CreatedDate)- Days_on_External_Internal_Hold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LM Case Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>