unpackaged/main/default/objects/Case/fields/LTD_or_VLTD_Checked__c.field-meta.xml
<CustomField>
    <fullName>LTD_or_VLTD_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LTD or VLTD selected from Policy Implementation. Cover Sheet Sent check box field most be checked to save the record.</description>
    <label>LTD or VLTD Checked</label>
    <type>Checkbox</type>
</CustomField>