unpackaged/main/default/objects/Case/fields/Manually_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Manually_Escalated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked true if case is manually escalated by means of button</description>
    <label>Manually Escalated</label>
    <type>Checkbox</type>
</CustomField>