unpackaged/main/default/objects/Case/fields/Master_Group__c.field-meta.xml
<CustomField>
    <fullName>Master_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup of Account Object</description>
    <label>Master Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Master Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Group Cases</relationshipLabel>
    <relationshipName>Master_Group_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>