unpackaged/main/default/objects/Case/fields/Master_Group_Partner_Affiliate_Agency__c.field-meta.xml
<CustomField>
    <fullName>Master_Group_Partner_Affiliate_Agency__c</fullName>
    <formula>Master_Group__r.Partner__r.Affiliate_Agency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Group Partner Affiliate Agency</label>
    <type>Text</type>
</CustomField>