unpackaged/main/default/objects/Case/fields/Master_Group_Policy__c.field-meta.xml
<CustomField>
    <fullName>Master_Group_Policy__c</fullName>
    <description>Used to return Master Group Policies</description>
    <formula>Master_Group__r.Group_Policy_num__c</formula>
    <label>Master Group Policy#</label>
    <type>Text</type>
</CustomField>