unpackaged/main/default/objects/Case/fields/Medical_Underwriting_Comments__c.field-meta.xml
<CustomField>
    <fullName>Medical_Underwriting_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is specific for Medical Underwriting private comments.</inlineHelpText>
    <label>Medical Underwriting Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>