unpackaged/main/default/objects/Case/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains Contact lookup</description>
    <label>Member</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3) OR (1 AND 3 AND 4 AND 5) OR (1 AND 6)</booleanFilter>
        <errorMessage>The Case Contact is not currently associated to a System Group within Salesforce.</errorMessage>
        <filterItems>
            <field>Contact.Membership_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <filterItems>
            <field>$Source.Reason</field>
            <operation>equals</operation>
            <value>Agent/Member</value>
        </filterItems>
        <filterItems>
            <field>Contact.Contact_Type__c</field>
            <operation>equals</operation>
            <value>Member</value>
        </filterItems>
        <filterItems>
            <field>$Source.Reason</field>
            <operation>equals</operation>
            <value>Group/Member</value>
        </filterItems>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Reason</field>
            <operation>notEqual</operation>
            <value>Group/Member, Agent/Member</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Member Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>