unpackaged/main/default/objects/Case/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <description>Captures Member Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures Member Number</inlineHelpText>
    <label>Member Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>