unpackaged/main/default/objects/Case/fields/MG_Beginning_Character__c.field-meta.xml
<CustomField>
    <fullName>MG_Beginning_Character__c</fullName>
    <description>This field is used to capture the first character of the Master Group&#39;s Name.</description>
    <formula>LEFT(Master_Group__r.Name, 1)</formula>
    <label>MG Beginning Character</label>
    <type>Text</type>
</CustomField>