unpackaged/main/default/objects/Case/fields/MG_Master_Group__c.field-meta.xml
<CustomField>
    <fullName>MG_Master_Group__c</fullName>
    <description>This field is used to capture the USAle Life whenever it is present in Master Group Lookup</description>
    <formula>Master_Group__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MG Master Group</label>
    <type>Text</type>
</CustomField>