unpackaged/main/default/objects/Case/fields/MG_Open_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>MG_Open_Enrollment__c</fullName>
    <formula>Master_Group__r.Open_Enrollment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MG Open Enrollment</label>
    <type>Checkbox</type>
</CustomField>