unpackaged/main/default/objects/Case/fields/MG_State__c.field-meta.xml
<CustomField>
    <fullName>MG_State__c</fullName>
    <description>This field is used to capture the Issue State of the Master Group&#39;s.</description>
    <formula>Master_Group__r.Issue_State__c</formula>
    <label>MG State</label>
    <type>Text</type>
</CustomField>