unpackaged/main/default/objects/Case/fields/MG_TAX_ID__c.field-meta.xml
<CustomField>
    <fullName>MG_TAX_ID__c</fullName>
    <formula>Master_Group__r.Tax_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MG TAX ID</label>
    <type>Text</type>
</CustomField>