unpackaged/main/default/objects/Case/fields/Next_Reminder_Email__c.field-meta.xml
<CustomField>
    <fullName>Next_Reminder_Email__c</fullName>
    <description>Captures the date of next reminder email for LifeMap Enrollment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures the date of next reminder email for LifeMap Enrollment</inlineHelpText>
    <label>Next Reminder Email</label>
    <type>Date</type>
</CustomField>