unpackaged/main/default/objects/Case/fields/Not_Administerable__c.field-meta.xml
<CustomField>
    <fullName>Not_Administerable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Administerable</label>
    <type>Checkbox</type>
</CustomField>