unpackaged/main/default/objects/Case/fields/Not_Administerable_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Administerable_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Not Administerable Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>