unpackaged/main/default/objects/Case/fields/Not_in_System__c.field-meta.xml
<CustomField>
    <fullName>Not_in_System__c</fullName>
    <label>Not in System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>