unpackaged/main/default/objects/Case/fields/Number_of_Lives__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Lives__c</fullName>
    <label>Number of Lives</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>