unpackaged/main/default/objects/Case/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <description>This field contains the reason of Onhold Case</description>
    <label>On-Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Benefits Amount Issue</fullName>
            </value>
            <value>
                <fullName>Census Issue</fullName>
            </value>
            <value>
                <fullName>Grandfather Issue</fullName>
            </value>
            <value>
                <fullName>Hold Removed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>