unpackaged/main/default/objects/Case/fields/Other_On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_On_Hold_Reason__c</fullName>
    <description>Large Text box where user can enter lot of comments/data</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other On-Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>