unpackaged/main/default/objects/Case/fields/Other_Rebill_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Rebill_Reason__c</fullName>
    <description>This field contains the reason of Rebill</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Rebill Reason</label>
    <type>TextArea</type>
</CustomField>