unpackaged/main/default/objects/Case/fields/Outcome_Details__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outcome Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>