unpackaged/main/default/objects/Case/fields/Outcome_of_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Outcome_of_Outreach__c</fullName>
    <inlineHelpText>* Restored Confidence can only be used if Starting Sentiment was Unclear/Opportunity/Low Confidence.
* Remained Neutral creates a task for follow-up in 90 days.</inlineHelpText>
    <label>Outcome of Outreach</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Starting_Sentiment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Confidence</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Restored Confidence</fullName>
            </value>
            <value>
                <fullName>Remained Neutral</fullName>
            </value>
            <value>
                <fullName>Referred to Other</fullName>
            </value>
            <value>
                <fullName>Business in Jeopardy</fullName>
            </value>
            <value>
                <fullName>No Response From Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>