unpackaged/main/default/objects/Case/fields/Owner_is_Queue__c.field-meta.xml
<CustomField>
    <fullName>Owner_is_Queue__c</fullName>
    <formula>IF( ISBLANK( Owner:Queue.Id ), &quot;No&quot;, &quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner is Queue</label>
    <type>Text</type>
</CustomField>