unpackaged/main/default/objects/Case/fields/Parent_Case_Formula__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Formula__c</fullName>
    <formula>Parent.RecordTypeId</formula>
    <label>Parent Case Formula</label>
    <type>Text</type>
</CustomField>