unpackaged/main/default/objects/Case/fields/Partner_Code__c.field-meta.xml
<CustomField>
    <fullName>Partner_Code__c</fullName>
    <formula>TEXT(Contact.Partner_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Code</label>
    <type>Text</type>
</CustomField>