unpackaged/main/default/objects/Case/fields/Partner_State__c.field-meta.xml
<CustomField>
    <fullName>Partner_State__c</fullName>
    <label>Partner State</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Arkansas</fullName>
            </value>
            <value>
                <fullName>Hawaii</fullName>
            </value>
            <value>
                <fullName>Oregon</fullName>
            </value>
            <value>
                <fullName>Utah</fullName>
            </value>
            <value>
                <fullName>Washington</fullName>
            </value>
            <value>
                <fullName>Idaho</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>