unpackaged/main/default/objects/Case/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Patient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>