unpackaged/main/default/objects/Case/fields/Person_Responsible_for_Area__c.field-meta.xml
<CustomField>
    <fullName>Person_Responsible_for_Area__c</fullName>
    <description>Who is responsible for this area?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Who is responsible for this area</inlineHelpText>
    <label>Person Responsible for Area</label>
    <length>35</length>
    <type>Text</type>
</CustomField>