unpackaged/main/default/objects/Case/fields/Physician_Statement__c.field-meta.xml
<CustomField>
    <fullName>Physician_Statement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>capture claim intake required document has been received</description>
    <inlineHelpText>capture is claim intake required document has been received</inlineHelpText>
    <label>Physician Statement</label>
    <type>Checkbox</type>
</CustomField>