unpackaged/main/default/objects/Case/fields/Physician_Statement_Received__c.field-meta.xml
<CustomField>
    <fullName>Physician_Statement_Received__c</fullName>
    <description>Captures date physician statement was received</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Captures date physician statement was received</inlineHelpText>
    <label>Physician Statement Received</label>
    <type>Date</type>
</CustomField>