unpackaged/main/default/objects/Case/fields/Policy_Implementation_Count__c.field-meta.xml
<CustomField>
    <fullName>Policy_Implementation_Count__c</fullName>
    <description>This field contains the count of records for the Policy Implementation Object.</description>
    <label>Policy Implementation Count</label>
    <summaryForeignKey>Policy_Implementation__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>