unpackaged/main/default/objects/Case/fields/Policy_Implementation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Policy_Implementation_Stage__c</fullName>
    <description>This field contains New Business Stages</description>
    <label>Old Policy Implementation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Triage</fullName>
                <default>true</default>
                <label>Triage</label>
            </value>
            <value>
                <fullName>Gate 1</fullName>
            </value>
            <value>
                <fullName>Gate 2</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>