unpackaged/main/default/objects/Case/fields/Policy_Implementation_Stage_Status__c.field-meta.xml
<CustomField>
    <fullName>Policy_Implementation_Stage_Status__c</fullName>
    <label>Policy Implementation Stage Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Policy_Implementation_Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Continue</fullName>
            </value>
            <value>
                <fullName>Halt</fullName>
            </value>
            <value>
                <fullName>Release with LTD</fullName>
            </value>
            <value>
                <fullName>Release without LTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>