unpackaged/main/default/objects/Case/fields/Policy_Implementation_Status__c.field-meta.xml
<CustomField>
    <fullName>Policy_Implementation_Status__c</fullName>
    <description>Policy Implementation Status</description>
    <label>Policy Implementation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Assigned to PSS</fullName>
            </value>
            <value>
                <fullName>Awaiting Signature</fullName>
            </value>
            <value>
                <fullName>Cert and Policy Review</fullName>
            </value>
            <value>
                <fullName>Member Entry</fullName>
            </value>
            <value>
                <fullName>Preparing Release</fullName>
            </value>
            <value>
                <fullName>Scrub</fullName>
            </value>
            <value>
                <fullName>System Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>