unpackaged/main/default/objects/Case/fields/Policy_ImplementationLU__c.field-meta.xml
<CustomField>
    <fullName>Policy_ImplementationLU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy ImplementationLU</label>
    <referenceTo>Policy_Implementation__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>