unpackaged/main/default/objects/Case/fields/Post_Review_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Post_Review_Incomplete__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is to show the cases which are post review incomplete</description>
    <label>Post-Review Incomplete</label>
    <type>Checkbox</type>
</CustomField>