unpackaged/main/default/objects/Case/fields/Prefill_Docs_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Prefill_Docs_Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prefill Docs Sent Date</label>
    <type>Date</type>
</CustomField>