unpackaged/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>captures products that can be claimed</description>
    <inlineHelpText>captures products that can be claimed</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Claim_Products</valueSetName>
    </valueSet>
</CustomField>