unpackaged/main/default/objects/Case/fields/Production_Probation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_Probation_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Production Probation Start Date</label>
    <type>Date</type>
</CustomField>