unpackaged/main/default/objects/Case/fields/Products_del__c.field-meta.xml
<CustomField>
    <fullName>Products_del__c</fullName>
    <description>This field contains products name and used in Mail Merge Doc</description>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>AD&amp;D</fullName>
            </value>
            <value>
                <fullName>AIRMED</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Critical Illness</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>DUO Accident</fullName>
            </value>
            <value>
                <fullName>DUO Critical</fullName>
            </value>
            <value>
                <fullName>DUO Hospital</fullName>
            </value>
            <value>
                <fullName>FICA Match</fullName>
            </value>
            <value>
                <fullName>FMLA</fullName>
            </value>
            <value>
                <fullName>Gap Care</fullName>
            </value>
            <value>
                <fullName>Hospital Confinement</fullName>
            </value>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>LIFE/ADD</fullName>
            </value>
            <value>
                <fullName>LTD</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Other Carrier Product</fullName>
            </value>
            <value>
                <fullName>STD</fullName>
            </value>
            <value>
                <fullName>Tax Advantage Accounts</fullName>
            </value>
            <value>
                <fullName>TDI</fullName>
            </value>
            <value>
                <fullName>VADD</fullName>
            </value>
            <value>
                <fullName>VGTL</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>VLTD</fullName>
            </value>
            <value>
                <fullName>Worksite to Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>