unpackaged/main/default/objects/Case/fields/PS_Child_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>PS_Child_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PS Child Case Created</label>
    <type>Checkbox</type>
</CustomField>