unpackaged/main/default/objects/Case/fields/PS_QA_Group_Issue_Count__c.field-meta.xml
<CustomField>
    <fullName>PS_QA_Group_Issue_Count__c</fullName>
    <label>PS QA Group Issue Count</label>
    <summaryFilterItems>
        <field>PS_QA_Scorecard__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Group Issue</value>
    </summaryFilterItems>
    <summaryForeignKey>PS_QA_Scorecard__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>